test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/extra_credit/static_var_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  int
  identifier(i)
  =
  const int(0)
  ;
  switch
  (
  const int(0)
  )
  {
  case
  identifier(i)
  :
  return
  const int(0)
  ;
  }
  return
  const int(0)
  ;
  }
